--- a/index.html
+++ b/index.html
@@ -18,317 +18,47 @@
 	<link rel="stylesheet" href="css/carousel.css">
 	<!-- stars -->
 	<link rel="stylesheet" href="css/stars.css">
+	<!-- Style Video -->
+    <link rel="stylesheet" href="css/video.css">
 </head>
 <body>
-	<!-- Section language -->
-	<section class="lang">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3">
-					<p>Inter Oceanic Market</p>
-				</div>
-				<div class="col-sm-3"></div>
-				<div class="col-sm-6">
-				 	<ul class="navbar-right">
-				 		<li>Language |</li>
-					    <li><a href="#">English</a></li>
-					    <li><a href="#">Português</a></li>
-					    <li><a href="#">中国</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Section logo -->
-	<section class="brand">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3">
-					<img src="img/demo_logo.png" alt="" class="img-responsive">
-				</div>
-				<div class="col-sm-5">
-					<form>
-					    <div class="input-group form-group-lg">
-					      <input type="text" class="form-control" placeholder="Buscar producto...">
-					      <div class="input-group-btn">
-					        <button class="btn btn-default btn-lg"type="submit"><i class="glyphicon glyphicon-search"></i></button>
-					      </div>
-					    </div>
-					</form>
-				</div>
-				<div class="col-sm-1">&nbsp</div>
-				<div class="col-sm-1">
-					<button type="button" class="btn btn-like btn-circle btn-lg"><i class="glyphicon glyphicon-heart"></i><span class="badge">23</span></button>
-				</div>
-				<div class="col-sm-1">&nbsp</div>
-				<div class="col-sm-1">
-					<button type="button" class="btn btn-buy btn-circle btn-lg"><i class="glyphicon glyphicon-gift"></i><span class="badge">5</span></button>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- separador -->
-	<div class="bottom"></div>
-	<!-- Section menu -->
-	<nav class="navbar navbar-default">
-        <div class="">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <img src="img/demo_logo_icon.png" alt="" class="img-responsive" height="50" width="50">
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-            	<li class="dropdown">
-		            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CATEGORÍAS <span class="caret"></span></a>
-		            <ul class="dropdown-menu">
-		              <li><a href="#">ALIMENTOS</a></li>
-		              <li><a href="#">BEBIDAS</a></li>
-		              <li><a href="#">VESTIMENTA</a></li>
-		              <li role="separator" class="divider"></li>
-		              <li class="dropdown-header">SOUVENIRS</li>
-		              <li><a href="#">ARTESANÍAS</a></li>
-		              <li><a href="#">TEJIDOS</a></li>
-		            </ul>
-		        </li>
-              <li class="colored"><a href="#">INICIO</a></li>
-              <li><a href="#">CONTACTO</a></li>
-              <li><a href="#">GUÍA DE COMPRA</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-    <!-- separador -->
-    <div class="bottom"></div>
-    <div>&nbsp</div>
-    <!-- section presentation -->
-    <div class="container">
-    	<div class="row">
-    		<div class="col-sm-6">
-    			<div class="topper">
-    				 <div class="adorno">Producto del mes</div>
-    				 <div class="card">
-						  <img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
-						  <div class="espaciado">
-						    <h4><b>Cacao</b></h4>
-							<ul class="rating fivestar">
-								<li class="one"><a href="#" title="1 Star">1</a></li>
-								<li class="two"><a href="#" title="2 Stars">2</a></li>
-								<li class="three"><a href="#" title="3 Stars">3</a></li>
-								<li class="four"><a href="#" title="4 Stars">4</a></li>
-								<li class="five"><a href="#" title="5 Stars">5</a></li>
-							</ul>
-							<p>$40</p>
-						    <p>Artesanía de la cultura Chavín.</p>
-						  </div>
-					</div>
-    			</div>
-    		</div>
-    		<div class="col-sm-6">
-			    <div id="owl-demo" class="owl-carousel owl-theme">
-			      <div class="item"><img src="img/slide1.jpg" alt=""></div>
-			      <div class="item"><img src="img/slide2.jpg" alt=""></div>
-			      <div class="item"><img src="img/slide3.jpg" alt=""></div>
-			    </div>
-    		</div>
-    	</div>
-    </div>
-    <!-- Section title -->
+	<div>&nbsp</div>
+	<!-- Video BG -->
+    <video poster="" id="bgvid" playsinline autoplay muted loop>
+        <source src="" type="video/webm">
+        <source src="video/vd.mp4" type="video/mp4">
+    </video>
+    <div class="separar"></div>
     <div class="container">
 		<div class="row">
-			<div class="col-sm-3">
-				<h2>ALIMENTOS</h2>
-				<div class="sub"></div>
-				<p>&nbsp</p>
+			<div class="col-sm-6">
+				<div class="adorno"><h2>Demo de tienda virtual</h2></div>
+			</div>
+			<div class="col-sm-6">
 			</div>
 		</div>
 	</div>
-	<!-- Section products artesanías-->
-     <div class="container">
-     	<div class="card-large row">
-     		<div class="bootom"></div>
-     		<div class="col-sm-4">
-     			<div class="card">
-				  <img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Cacao</b></h4>
-					<ul class="rating fourstar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$55.56</p>
-				    <p>Bolsa de cacao de 500mg.</p>
-				  </div>
-				</div>
-     		</div>
-     		<div class="col-sm-4">
-     			<div class="card">
-				  <img src="img/alimen2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Café</b></h4>
-				    <ul class="rating fivestar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$42</p>
-				    <p>Bolsa de café de 1kg.</p>
-				  </div>
-				</div>
-     		</div>
-     		<div class="col-sm-4">
-     			<div class="card">
-				  <img src="img/alimen3.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Papas</b></h4>
-				    <ul class="rating fourstar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$10</p>
-				    <p>Papas de diferentes variedadesg 1kg.</p>
-				  </div>
-				</div>
-     		</div>
-     	</div>
-     </div>
-	<!-- Section title -->
+	<!-- Selection -->
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3">
-				<h2>ARTESANÍAS</h2>
-				<div class="sub"></div>
-				<p>&nbsp</p>
+			<div class="col-sm-12">
+				<div class="topper">
+					<h4 class="text-center">Selecciona el color del tema:</h4>
+					<ul class="text-center">
+					    <li><a class="btn btn-default-1 btn-lg" href="index-1.html">T.Light</a></li>
+					    <li><a class="btn btn-default-2 btn-lg" href="index-2.html">T.Dark</a></li>
+					    <li><a class="btn btn-default-3 btn-lg" href="index-3.html">Black</a></li>
+					</ul>
+					<div>&nbsp</div>
+				</div>
 			</div>
 		</div>
 	</div>
-    <!-- Section products artesanías-->
-     <div class="container">
-     	<div class="card-large row">
-     		<div class="bootom"></div>
-     		<div class="col-sm-3">
-     			<div class="card">
-				  <img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-					<ul class="rating fourstar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$40</p>
-				    <p>Artesanía de la cultura Chavín.</p>
-				  </div>
-				</div>
-     		</div>
-     		<div class="col-sm-3">
-     			<div class="card">
-				  <img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fivestar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$40</p>
-				    <p>Vasijas de la cultura Chavín</p>
-				  </div>
-				</div>
-     		</div>
-     		<div class="col-sm-3">
-     			<div class="card">
-				  <img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fourstar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$40</p>
-				    <p>Artesanía de la cultura Chavín.</p>
-				  </div>
-				</div>
-     		</div>
-     		<div class="col-sm-3">
-     			<div class="card">
-				  <img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fivestar">
-						<li class="one"><a href="#" title="1 Star">1</a></li>
-						<li class="two"><a href="#" title="2 Stars">2</a></li>
-						<li class="three"><a href="#" title="3 Stars">3</a></li>
-						<li class="four"><a href="#" title="4 Stars">4</a></li>
-						<li class="five"><a href="#" title="5 Stars">5</a></li>
-					</ul>
-					<p>$40</p>
-				    <p>Vasijas de la cultura Chavín</p>
-				  </div>
-				</div>
-     		</div>
-     	</div>
-     </div>
-     <div>&nbsp</div>
-     <div class="bottom"></div>
-     <!-- Section pre-footer -->
-     <section class="pre-footer">
-     	<div class="container">
-     		<div class="row">
-     			<div class="col-sm-2">
-     				<h3>Desarrollado por:</h3>
-     			</div>
-     			<div class="col-sm-3">
-     				<img src="img/logosdc.png" alt="" class="img-responsive" height="70" width="70">
-     			</div>
-     			<div class="col-sm-2">
-     				<h3>Municipalidad Provincial del Santa:</h3>
-     			</div>
-     			<div class="col-sm-2">
-     				<img src="img/muni.png" alt="" class="img-responsive" height="50" width="50">
-     			</div>
-     			<div class="col-sm-3">
-     				<img src="img/creditcards.png" class="navbar-right" alt="">
-     			</div>
-     		</div>
-     	</div>
-     </section>
-    <!-- Section footer -->
-	<section class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6">
-					Market 2017 &copy; | Todos los derechos reservados.
-				</div>
-				<div class="col-sm-6">
-				 	<ul class="navbar-right">
-					    <li><a href="#">Políticas de privacidad</a></li>
-					    <li><a href="#">Acerca de nosotros</a></li>
-					    <li><a href="#">FAQ</a></li>
-					</ul>
-				</div>
-			</div>
+	<div class="separar">
+		<div class="text-center">
+			<img src="img/logos-varios.png" width="460" height="109" alt="">
 		</div>
-	</section>
+	</div>
 	<!-- load jquery script -->
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<!-- load bootstrap script -->
@@ -336,5 +66,7 @@
 	<!-- Include Owl Carousel js plugin -->
 	<script src="owl-carousel/owl.carousel.min.js"></script>
 	<script src="js/callowlplugin.js"></script>
+	<!-- Javascript Video -->
+    <script src="js/video.js"></script>
 </body>
 </html>
