--- a/index-1.html
+++ b/index-1.html
@@ -62,7 +62,7 @@
 				</div>
 				<div class="col-sm-1">&nbsp</div>
 				<div class="col-sm-1">
-					<button type="button" class="btn btn-buy btn-circle btn-lg"><i class="glyphicon glyphicon-gift"></i><span class="badge">5</span></button>
+					<button type="button" class="btn btn-buy btn-circle btn-lg"><i class="glyphicon glyphicon-shopping-cart"></i><span class="badge">5</span></button>
 				</div>
 			</div>
 		</div>
@@ -110,21 +110,25 @@
     	<div class="row">
     		<div class="col-sm-6">
     			<div class="topper">
-    				 <div class="adorno">Producto del mes</div>
+    				 <div class="adorno"><h4><i class="glyphicon glyphicon-gift"></i> Producto del mes</h4></div>
     				 <div class="card">
-						  <img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
-						  <div class="espaciado">
-						    <h4><b>Cacao</b></h4>
-							<ul class="rating fivestar">
-								<li class="one"><a href="#" title="1 Star">1</a></li>
-								<li class="two"><a href="#" title="2 Stars">2</a></li>
-								<li class="three"><a href="#" title="3 Stars">3</a></li>
-								<li class="four"><a href="#" title="4 Stars">4</a></li>
-								<li class="five"><a href="#" title="5 Stars">5</a></li>
-							</ul>
-							<p>$40</p>
-						    <p>Artesanía de la cultura Chavín.</p>
-						  </div>
+						<img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
+						<a type="button" data-toggle="tooltip" title="A 50 personas les gustó" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+						<a type="button" href="cart-1.html" data-toggle="tooltip" title="43 veces comprado" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+						<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+						<div class="espaciado">
+						<h4><b>Cacao</b></h4>
+						<ul class="rating fivestar">
+							<li class="one"><a href="#" title="1 Star">1</a></li>
+							<li class="two"><a href="#" title="2 Stars">2</a></li>
+							<li class="three"><a href="#" title="3 Stars">3</a></li>
+							<li class="four"><a href="#" title="4 Stars">4</a></li>
+							<li class="five"><a href="#" title="5 Stars">5</a></li>
+						</ul>
+						<div class="tag-price"><h4><i class="glyphicon glyphicon-credit-card"></i> $40</h4></div>
+						<div class="tag-info"><h4><i class="glyphicon glyphicon-info-sign"></i> Bolsa de café de 1kg.</h4></div>
+						<div class="tag-stock"><h4><i class="glyphicon glyphicon-info-sign"></i> 50 unidades disponibles.</h4></div>
+						</div>
 					</div>
     			</div>
     		</div>
@@ -153,9 +157,12 @@
      		<div class="bootom"></div>
      		<div class="col-sm-4">
      			<div class="card">
-				  <img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Cacao</b></h4>
+				  	<img src="img/alimen1.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" href="cart-1.html" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Cacao</b></h4>
 					<ul class="rating fourstar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
@@ -163,43 +170,52 @@
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$55.56</p>
-				    <p>Bolsa de cacao de 500mg.</p>
-				  </div>
+					<div class="tag-price"><h4><i class="glyphicon glyphicon-credit-card"></i> $55.56</h4></div>
+					<div class="tag-info"><h4><i class="glyphicon glyphicon-info-sign"></i> Bolsa de cacao de 500mg.</h4></div>
+					<div class="tag-stock"><h4><i class="glyphicon glyphicon-info-sign"></i> 60 unidades disponibles.</h4></div>
+					</div>
 				</div>
      		</div>
      		<div class="col-sm-4">
      			<div class="card">
-				  <img src="img/alimen2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Café</b></h4>
-				    <ul class="rating fivestar">
+				  	<img src="img/alimen2.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Café</b></h4>
+					<ul class="rating fivestar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
 						<li class="three"><a href="#" title="3 Stars">3</a></li>
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$42</p>
-				    <p>Bolsa de café de 1kg.</p>
+					<div class="tag-price"><h4><i class="glyphicon glyphicon-credit-card"></i> $43.5</h4></div>
+					<div class="tag-info"><h4><i class="glyphicon glyphicon-info-sign"></i> Bolsa de café de 58mg.</h4></div>
+					<div class="tag-stock"><h4><i class="glyphicon glyphicon-info-sign"></i> 123 unidades disponibles.</h4></div>
 				  </div>
 				</div>
      		</div>
      		<div class="col-sm-4">
      			<div class="card">
-				  <img src="img/alimen3.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Papas</b></h4>
-				    <ul class="rating fourstar">
+				  	<img src="img/alimen3.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Papas</b></h4>
+					<ul class="rating fourstar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
 						<li class="three"><a href="#" title="3 Stars">3</a></li>
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$10</p>
-				    <p>Papas de diferentes variedadesg 1kg.</p>
-				  </div>
+					<div class="tag-price"><h4><i class="glyphicon glyphicon-credit-card"></i> $48.5</h4></div>
+					<div class="tag-info"><h4><i class="glyphicon glyphicon-info-sign"></i> Sacos de papas de 10kg.</h4></div>
+					<div class="tag-stock"><h4><i class="glyphicon glyphicon-info-sign"></i> 12400 unidades disponibles.</h4></div>
+					</div>
 				</div>
      		</div>
      	</div>
@@ -220,9 +236,12 @@
      		<div class="bootom"></div>
      		<div class="col-sm-3">
      			<div class="card">
-				  <img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
+				  	<img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></button>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Artesanías</b></h4>
 					<ul class="rating fourstar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
@@ -230,60 +249,73 @@
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$40</p>
-				    <p>Artesanía de la cultura Chavín.</p>
-				  </div>
+					<div class="tag-price"><h5><i class="glyphicon glyphicon-credit-card"></i> $41.5</h5></div>
+					<div class="tag-info"><h5><i class="glyphicon glyphicon-info-sign"></i> Artesanía de la cultura Chavín.</h5></div>
+					<div class="tag-stock"><h5><i class="glyphicon glyphicon-info-sign"></i> 23 unidades disponibles.</h5></div>
+					</div>
 				</div>
      		</div>
      		<div class="col-sm-3">
      			<div class="card">
-				  <img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fivestar">
+				  	<img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Artesanías</b></h4>
+					<ul class="rating fivestar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
 						<li class="three"><a href="#" title="3 Stars">3</a></li>
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$40</p>
-				    <p>Vasijas de la cultura Chavín</p>
-				  </div>
+					<div class="tag-price"><h5><i class="glyphicon glyphicon-credit-card"></i> $35.4</h5></div>
+					<div class="tag-info"><h5><i class="glyphicon glyphicon-info-sign"></i> Vasijas de la cultura Chavín.</h5></div>
+					<div class="tag-stock"><h5><i class="glyphicon glyphicon-info-sign"></i> 34 unidades disponibles.</h5></div>
+					</div>
 				</div>
      		</div>
      		<div class="col-sm-3">
      			<div class="card">
-				  <img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fourstar">
+				  	<img src="img/artesan1.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Artesanías</b></h4>
+					<ul class="rating fourstar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
 						<li class="three"><a href="#" title="3 Stars">3</a></li>
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$40</p>
-				    <p>Artesanía de la cultura Chavín.</p>
-				  </div>
+					<div class="tag-price"><h5><i class="glyphicon glyphicon-credit-card"></i> $41.5</h5></div>
+					<div class="tag-info"><h5><i class="glyphicon glyphicon-info-sign"></i> Artesanía de la cultura Chavín.</h5></div>
+					<div class="tag-stock"><h5><i class="glyphicon glyphicon-info-sign"></i> 23 unidades disponibles.</h5></div>
+					</div>
 				</div>
      		</div>
      		<div class="col-sm-3">
      			<div class="card">
-				  <img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
-				  <div class="espaciado">
-				    <h4><b>Artesanías</b></h4>
-				    <ul class="rating fivestar">
+				  	<img src="img/artesan2.jpg" alt="Avatar" class="img-responsive img-redondis">
+				  	<a type="button" class="btn btn-like btn-circle btn-lg sup"><i class="glyphicon glyphicon-heart"></i></a>
+					<a type="button" class="btn btn-buy btn-circle btn-lg sup"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+					<a type="button" class="btn btn-detail btn-circle btn-lg sup"><i class="glyphicon glyphicon-option-horizontal"></i></a>
+					<div class="espaciado">
+					<h4><b>Artesanías</b></h4>
+					<ul class="rating fivestar">
 						<li class="one"><a href="#" title="1 Star">1</a></li>
 						<li class="two"><a href="#" title="2 Stars">2</a></li>
 						<li class="three"><a href="#" title="3 Stars">3</a></li>
 						<li class="four"><a href="#" title="4 Stars">4</a></li>
 						<li class="five"><a href="#" title="5 Stars">5</a></li>
 					</ul>
-					<p>$40</p>
-				    <p>Vasijas de la cultura Chavín</p>
-				  </div>
+					<div class="tag-price"><h5><i class="glyphicon glyphicon-credit-card"></i> $35.4</h5></div>
+					<div class="tag-info"><h5><i class="glyphicon glyphicon-info-sign"></i> Vasijas de la cultura Chavín.</h5></div>
+					<div class="tag-stock"><h5><i class="glyphicon glyphicon-info-sign"></i> 34 unidades disponibles.</h5></div>
+					</div>
 				</div>
      		</div>
      	</div>
@@ -330,5 +362,10 @@
 	<!-- Include Owl Carousel js plugin -->
 	<script src="owl-carousel/owl.carousel.min.js"></script>
 	<script src="js/callowlplugin.js"></script>
+	<script>
+	$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+	});
+	</script>
 </body>
 </html>
