--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="img/demo_logo_icon.png" type="image/x-icon" rel="shortcut icon">
 	<meta name="description" content="InterOceanic Market">
-	<link href="https://fonts.googleapis.com/css?family=Dosis:700" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css?family=Dosis:600" rel="stylesheet">  
 	<!-- load bootstrap css-->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/theme.css">
@@ -32,7 +32,7 @@
     <div class="container">
 		<div class="row">
 			<div class="col-sm-6">
-				<div class="adorno"><h2>Demo de tienda virtual</h2></div>
+				<div class="adorno"><h3><i class="glyphicon glyphicon-th-large"></i> Demo de tienda virtual</h3></div>
 			</div>
 			<div class="col-sm-6">
 			</div>
@@ -42,11 +42,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="topper">
-					<h4 class="text-center">Selecciona el color del tema:</h4>
-					<ul class="text-center">
+				<div class="topper text-center">
+					<h4>Selecciona el color del tema:</h4>
+					<ul>
 					    <li><a class="btn btn-default-1 btn-lg" href="index-1.html">T.Light</a></li>
+					    <li>&nbsp</li>
 					    <li><a class="btn btn-default-2 btn-lg" href="index-2.html">T.Dark</a></li>
+					    <li>&nbsp</li>
 					    <li><a class="btn btn-default-3 btn-lg" href="index-3.html">Black</a></li>
 					</ul>
 					<div>&nbsp</div>
@@ -55,8 +57,8 @@
 		</div>
 	</div>
 	<div class="separar">
-		<div class="text-center">
-			<img src="img/logos-varios.png" width="460" height="109" alt="">
+		<div align="center">
+			<img src="img/logos-varios.png" class="img-responsive" width="460" height="109" alt="">
 		</div>
 	</div>
 	<!-- load jquery script -->
